--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -168,7 +168,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \noindent
 \years{01/2020--present}\textsc{Senior Lecturer in Music and Audio Technology}. Leicester Media School, Faculty of Computing, Engineering and Media, DMU. \\
 \years{08/2018--12/2019}\textsc{Associate Professor in Music Technology}. Department of Music, NTNU. \\
-\years{08/2018--01/2019}\textsc{Visiting Lecturer}. C4DM, School of EECS, QMUL. \\
+\years{08/2018--01/2019}\textsc{Visiting Lecturer}. C4DM, School of Electronic Engineering and Computer Science (EECS), Queen Mary University of London (QMUL). \\
 \years{10/2017--07/2018}\textsc{Postdoctoral Research Assistant}. C4DM, School of EECS, QMUL. \\
 \years{07/2015--09/2017}\textsc{Postdoctoral Fellow}. Center for Music Technology (GTCMT) | Digital Media Program, Georgia Tech. \\
 \years{08/2013--09/2014}\textsc{Research Fellow}. London Knowledge Lab, UCL Institute of Education. London. \\
@@ -216,7 +216,8 @@ Role: Creator \& Director.
 Funding body: EPSRC. \\
 Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding''.\\
 Role: PI. \\
-Collaborators: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; IKLECTIK; Phonos; L’Ull Cec. \\
+Partners: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; IKLECTIK; Phonos; L’Ull Cec. \\
+Collaborators: Toplap Barcelona, Flucoma, Freesound.\\
 Total Pound Amount: 10,000 \pounds
 %Candidate’s Share: 
 
@@ -279,7 +280,7 @@ Total Fundraised Dollar Amount: 11,450 \$
 \years{09/2001--08/2002}\textsc{Audiovisual production grant} \\
 Funding body: Departament de Cultura de la Generalitat de Catalunya (Department of Culture of Catalan Government).\\
 Project: ``Transdata Pr.''.  \\
-Role: Creator, Video Editor \& Director.\\
+Role: Creator, Director \& Video Editor.\\
 Collaborators: Gerard Roma (music), Oscar Abril Ascaso (essay). \\
 Total Euro Amount: 3,000 \euro\\ 
 Candidate’s Share: 50\% (1,500 \euro)\\
@@ -287,7 +288,7 @@ Candidate’s Share: 50\% (1,500 \euro)\\
 \years{09/1998--08/1999}\textsc{Audiovisual production grant} \\
 Funding body: Departament de Cultura de la Generalitat de Catalunya (Department of Culture of Catalan Government).\\
 Project: ``Mitösömä''.  \\
-Role: Creator, Animation Editor \& Director.\\
+Role: Creator, Director \& Animation Editor.\\
 Collaborators: Gerard Roma (music). \\
 Total Euro Amount: 3,000 \euro\\
 Candidate’s Share: 50\% (1,500 \euro)
@@ -319,7 +320,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Peer-Reviewed Book Chapters}
 \noindent
 
-\years{2020}Støckert, R., Bergsland, A., \textbf{Xambó, A.} (2020). “The Notion of Presence in a Telematic Cross-Disciplinary Program for Music, Communication and Technology". In Eiksund, Ø. J., Angelo, E., Knigge, J. eds. Music Technology in Education -- Channeling and Challenging Perspectives. Cappelen Damm Akademisk, Oslo. pp. 73--98.\\
+\years{2020}Støckert, R., Bergsland, A., \textbf{Xambó, A.} (2020). “The Notion of Presence in a Telematic Cross-Disciplinary Program for Music, Communication and Technology". In Eiksund, Ø. J., Angelo, E., Knigge, J. eds. Music Technology in Education -- Channeling and Challenging Perspectives. Cappelen Damm Akademisk, Oslo. pp. 77--101.\\
 \years{2019}\textbf{Xambó, A.}, Font, F., Fazekas, G., Barthet, M. (2019). “Leveraging Online Audio Commons Content For Media Production". In Michael Filimowicz ed. Foundations in Sound Design for Linear Media: An Interdisciplinary Approach. Routledge. pp. 248-282. ISBN 9781138093966.\\
 \years{2016}\textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.\\
 \years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C., Jordà, S. (2013). “Video Analysis for Evaluating Music Interaction: Musical Tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
@@ -327,12 +328,12 @@ Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Peer-Reviewed Journal Special Issues}
 \noindent
-\years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). Special Issue on Web Audio. \emph{Journal of Audio Engineering Society}, 68(10).
+\years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). JAES Special Issue on Web Audio. \emph{Journal of Audio Engineering Society}, 68(10).
 
 
 \subsection*{Journal Articles}
 \noindent
-{\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. Accepted to appear at the \emph{Special Issue on Web Audio}. \emph{Journal of Audio Engineering Society}, 68(10), pp. TBD.}\\
+{\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. \emph{Journal of Audio Engineering Society}, 68(10), pp. 727--737. \emph{Special Issue on Web Audio}.}\\
 \years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.}, Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
 \years{2018a}\textbf{Xambó, A.}, Roma, G., Shah, P., Tsuchiya, T., Freeman, J., Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
@@ -487,7 +488,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2011c} \textsc{Poster \& Demo Presenter} together with Milne, A. J. (May 30, 2011). “Hex Player — A Virtual Musical Controller". \emph{NIME '11}. Oslo, Norway.\\
 \years{2011b} \textsc{Poster Presenter}. (March 8, 2011). “Designing and Evaluating Interactive Systems: Musical Tabletops for Collective Music Performance". \emph{The Open University Poster Competition 2011}. Milton Keynes, UK.\\
 \years{2011a} \textsc{Poster Presenter}. (January 25, 2011) “TOUCHtr4ck: Democratic Collaborative Music". \emph{TEI '11}. Funchal, Madeira.\\
-\years{2010} \textsc{Poster Presenter}. (June 8, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
+\years{2010b} \textsc{Poster Presenter}. (December 21, 2010). Xambó, A., Laney, R., Dobbyn, C., Jordà, S. “Multi-touch Interaction Techniques for Collaborative Music Activities". \emph{DMRN+5: Digital Music Research Network One-day Workshop 2010}, Queen Mary, University of London. London.\\
+\years{2010a} \textsc{Poster Presenter}. (June 8, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
 \years{2008b} \textsc{Poster Presenter}. (June 9--11, 2010). “Interfaces for Sketching Musical Compositions". \emph{SMC Summer School 2008}. Genoa, Italy.\\
 \years{2008a} \textsc{Poster Presenter} together with Roma, G. (June 6, 2008). “A Tabletop Waveform Editor for Live Performance". \emph{NIME '08}. Genoa, Italy.
 
@@ -533,7 +535,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Participation in Compilations}
 \noindent
 
-\years{2020}Anna Xambó. “Poème Symphonique For Tape Metronome: Variation I" (5 min 38 sec) in \emph{In Unison} [FLAC/MP3 files]. Brussels: i.u. \\	
+\years{2020b}Anna Xambó. “Magnets" (4 min 21 sec) in \emph{Compassion Through Algorithms Vol. II} [WAV/MP3 files]. Sheffield: Light Entries. \\	
+\years{2020a}Anna Xambó. “Poème Symphonique For Tape Metronome: Variation I" (5 min 38 sec) in \emph{In Unison} [WAV/MP3 files]. Brussels: i.u. \\	
 \years{2019}Anna Xambó. “Kicks \& Cuts" (2 min 21 sec). in \emph{10th Anniversary Festival en Tiempo Real - WoNoMute Playlist} [WAV file].\\
 \years{2018}peterMann. “n02-petermann" (11 min 10 sec). in \emph{Noiselets} [FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
 \years{2016}peterMann. “Go wild y'all" (1 min). in \emph{Microtopies 2016} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
@@ -543,7 +546,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Broadcasting}
 \noindent
 
-\years{2019}Anna Xambó's “Footsteps". Feminatronic \#161 - Your 2019 Playback and More (SoundCloud's playlist).\\
+\years{2020}Anna Xambó's “Magnets". (November 9, 2020). Sleepsang - Hyperobjects w/ Sleepsang (Mixcloud playlist).\\
+\years{2019}Anna Xambó's “Footsteps". Feminatronic \#161 - Your 2019 Playback and More (SoundCloud playlist).\\
 \years{2018c}Anna Xambó's “H2RI.01-04". (June 21, 2018). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
 \years{2018b}Anna Xambó's “H2RI.011". (June 10, 2018). NILUCCIO ON NOISE. Podcast \#154 (May 2018).\\
 \years{2018a}Anna Xambó's “H2RI.07". (May 17, 2018). No Pigeonholes EXP on KOWS-FM.\\
@@ -562,14 +566,15 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Performances}
 \noindent
 
-\years{2020d}\textbf{Xambó, A.} (November 14, 2020). Live coding session. \emph{Sound Junction Satellites: Live Coding \& 3-D Sound}. University of Sheffield Concerts. Octagon Centre, Sheffield, UK.\\
+\years{2020e}\textbf{Xambó, A.} (December 12, 2020). ``A live coding session''. \emph{Similar Sounds: A Virtual Agent in Live Coding}. IKLECTIK, London. Online event. Streaming from Sheffield, UK.\\
+\years{2020d}\textbf{Xambó, A.} (November 14, 2020). ``A live coding session in binaural audio''. \emph{Sound Junction Satellites: Live Coding \& 3-D Sound -- Online Live Stream}. University of Sheffield Concerts/Algomech, Sheffield, UK. Online event. Streaming from Sheffield, UK.\\
 \years{2020c}\textbf{Xambó, A.} (July 17, 2020). ``A Live Coding Exploration of How the Network Sounds''. \emph{Network Music Festival 2020}. Streaming from Sheffield, UK.\\
 \years{2020b}\textbf{Xambó, A.} (March 22, 2020). ``Crowdsourced Eulerisms''. \emph{Eulerroom Equinox 2020}. Streaming from Sheffield, UK.\\
 \years{2020a}\textbf{Xambó, A.} (February 28, 2020). ``A situated live coding session''. \emph{MTI Concert} celebrating 20 years of Music, Technology and Innovation at DMU with current and past staff and PhD alumni. PACE 1, Leicester, UK.\\
 \years{2019}\textbf{Xambó, A.} (January 18, 2019). ``Live coding with crowdsourced sounds \& a drum machine''. \emph{International Conference on Live Coding}, Medialab Prado, Madrid, Spain.\\
 \years{2018d}\textbf{Xambó, A.} (November 24, 2018). ``A session on participatory mobile music and live coding using crowdsourced sounds''. \emph{NTNU Research Concert}. Dokkhuset. Trondheim, Norway.\\
-\years{2018c}\textbf{peterMann.} (September 28, 2018). ``Live coding session''. \emph{The Raw, Inter/sections 2018. Café 1001}. London, UK.\\
-\years{2018b}\textbf{Xambó, A.} (September 19, 2018). Audience device participation piece. ``Imaginary Berlin''. \emph{WAC '18}. Factory Berlin. Berlin, Germany.\\  
+\years{2018c}\textbf{peterMann.} (September 28, 2018). ``Live coding session''. \emph{The Raw, Inter/sections 2018}. Café 1001. London, UK.\\
+\years{2018b}\textbf{Xambó, A.} (September 19, 2018). Audience device participation piece. ``Imaginary Berlin''. \emph{WAC 18}. Factory Berlin. Berlin, Germany.\\  
 \years{2018a}\textbf{Xambó, A.} (August 9, 2018). Live. ``MareNostrum''. \emph{Cube Fest}. Moss Arts Center. Blacksburg, VA, USA.\\
 \years{2017}\textbf{peterMann}. (January 8, 2017). Live coding session. \emph{Noiselets: A Noise Music Microfestival}. Freedonia, Barcelona, Spain.\\
 \years{2016b}\textbf{Xambó, A.} (April 22, 2016). Live coding with EarSketch. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
@@ -581,7 +586,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Collaborative Performances}
 \noindent
 \years{2020}Schroeder, F., Meireles, M., Mannone, M., Papadomanolaki, M., Brown, N., Stolfi, A., Alarcón, X., \textbf{Xambó, A.} (July 28, 2020). “Absurdity" (telematic performance by the Female Laptop Orchestra (FLO)). \emph{Physically Distant \#2: More Online Talks on Telematic Performance}. Streaming from Sheffield, UK.\\
-\years{2019}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (December 4, 2019). “Trondheim EMP Repository processing". \emph{Web Audio Conference 2019}. Rockheim, Trondheim, Norway.\\
+\years{2019}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (December 4, 2019). “Trondheim EMP Repository processing". \emph{WAC 2019}. Rockheim, Trondheim, Norway.\\
 \years{2018e}Brown, N., Chudy, M., Dobson, L., Hoel, A.M., Ikkache, L., Pase, T., Schroeder, F., Stolfi, A., Wilkie, S., \textbf{Xambó, A.} (November 22, 2018). “Transmusicking II". Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
 \years{2018d}Martin, C.M., Lesteberg, M., Jawad, K., Aandahl, E., \textbf{Xambó, A.} (August 29, 2018). ``Stillness during Tension''. \emph{MCT Open Seminar}. MCT Portal, NTNU / UiO, Trondheim / Oslo.\\   
 \years{2018c}Martin, C.M., \textbf{Xambó, A.}, Visi, F., Morreale, F., Jensenius, A.R. (June 5, 2018). ``Stillness during Tension''. \emph{NIME '18}. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.\\   
@@ -624,6 +629,10 @@ Collaborator: Gerard Roma.
 \subsection*{Code}
 \noindent
 
+\years{2020--present}MIRLCa: \href{https://github.com/mirlca/code}{github.com/mirlca/code}.\\
+Role: Concept and implementation.\\
+\years{2019--present}MIRLC 2.0.\\
+Role: Concept and implementation.\\
 \years{2018b}Embedded AudioCommons: \href{https://github.com/AudioCommons/embedded-audiocommons}{github.com/AudioCommons/embedded-audiocommons}.\\
 Role: Concept and implementation.\\
 \years{2018a}HCI Python Utils: \href{https://github.com/axambo/hci-python-utils}{github.com/axambo/hci-python-utils}.\\
@@ -828,6 +837,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Blogging}
 \noindent
 
+\years{06/2020--present}\href{https://mirlca.dmu.ac.uk}{MIRLCAuto}, the website and blog of the research project \emph{MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding}. Creator and Author.\\ 
 \years{09/2018--12/2019}\href{http://wonomute.no}{Women Nordic Music Technology}, the website and blog of the WoNoMute organization. Co-Creator and Coordinator.\\ 
 \years{08/2018--12/2019}\href{https://mct-master.github.io}{MCT master blog}, the blog of the MCT master. Co-Creator and Co-Coordinator.\\ 
 \years{05/2017--07/2018}\href{https://www.audiocommons.org}{Audio Commons}, the blog of the EU-funded project Audio Commons. Coordinator, Reviewer and Author.\\ 
@@ -841,7 +851,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \noindent
 
 \years{2002}Co-Founder and Member of b4ng, a multidisciplinary collective in search of new forms of audiovisual communication. Barcelona.\\
-\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.%[1.3cm]%hack
+\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona. \\ [1.3cm]%hack
 
 %\hrule
 \section*{Professional Activities}
@@ -851,7 +861,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \noindent
 \emph{Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2})$.}\\
 \emph{Association for Computing Machinery (ACM)}.\\
-\emph{International Computer Music Association (ICMA)}.
+\emph{International Computer Music Association (ICMA)}.\\
+\emph{Intersections, Feminism, Technology \& Digital Humanities network (IFTe).}
 
 
 \subsection*{Academic Programme Leader}
@@ -861,42 +872,54 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \years{01/2019--12/2019}\textsc{MCT Programme Study Leader}, Department of Music, NTNU.\\
 \years{01/2019--12/2019}\textsc{MCT Programme Council Leader}, Department of Music, NTNU.
 
+\subsection*{Organisation Founder / Chair}
+\noindent
+
+\years{2018-2019}\textsc{Co-Founder \& Chair}. \emph{Women Nordic Music Technology}, NTNU/UiO. Trondheim, Norway.\\
+\years{2016--2017}\textsc{Co-Founder \& Co-Chair}. \emph{Women in Music Tech}, GTCMT, Georgia Tech. Atlanta, GA, USA.
+
 
 \subsection*{Fellow}
 \noindent
 
 \years{2019--present}\emph{Associate Fellow of the Higher Education Academy}, United Kingdom.\\
-\years{2018--2019}\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS),  Queen Mary University of London (QMUL).
+\years{2018--2019}\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of EECS, QMUL.
 
-\subsection*{Academic Chair / Committee Member / Conference Chair / Conference Meta-Reviewer}
+
+\subsection*{Officer / Consultant}
 \noindent
 
-\years{2020e}\textsc{Conference Programme Committee Member}. \emph{ACM Creativity \& Cognition 2021}. Venice, Italy.\\
-\years{2020d}\textsc{Conference Programme Committee Member}. \emph{ACM Tangible, Embedded and Embodied Interaction 2021}. Salzburg, Austria.\\
+\years{2020}\textsc{Diversity consultant}. \emph{2nd Conference on AI Music Creativity (MuMe + CSMC)}. Graz, Austria.\\
+\years{2019--present}\textsc{WiNIME Officer}. \emph{International Conference of New Interfaces for Musical Expression}.
+
+
+\subsection*{Conference Academic Chair / Meta-Reviewer / Local Chair}
+\noindent
+
+\years{2020e}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{ACM Creativity \& Cognition 2021}. Venice, Italy.\\
+\years{2020d}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{ACM Tangible, Embedded and Embodied Interaction 2021}. Salzburg, Austria.\\
 \years{2020c}\textsc{Conference Session Chair} (``Hardware and Software for SMC''). \emph{Sound and Music Computing Conference}. Torino, Italy.\\
-\years{2020b}\textsc{Conference Poster Co-Chair \& Conference Programme Committee Member}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
-\years{2020a}\textsc{Conference Meta-Reviewer}\emph{New Interfaces for Musical Expression} (2020).\\
-\years{2019h--present}\textsc{WiNIME officer}. \emph{International Conference of New Interfaces for Musical Expression}.\\ 
-\years{2019g}\textsc{Conference Local Committee Member \& Conference Programme Committee Member}. \emph{International Conference on Live Interfaces 2020}. Trondheim, Norway.\\ 
+\years{2020b}\textsc{Conference Poster Co-Chair}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
+\years{2020a}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2020).\\
+\years{2019g}\textsc{Conference Local Committee Member}. \emph{International Conference on Live Interfaces 2020}. Trondheim, Norway.\\ 
 \years{2019f}\textsc{Conference General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
-\years{2019e}\textsc{Conference Programme Committee Member \& Meta-Reviewer}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
+\years{2019e}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
 \years{2019d}\textsc{Conference Session Chair} (``Mapping \& Sound Generation''). \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
 \years{2019c}\textsc{Conference Paper Co-Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
-\years{2019b}\textsc{Conference Programme Committee Member}. \emph{ACM Tangible, Embedded and Embodied Interaction 2020}. Sydney, Australia.\\ 
-\years{2019a}\textsc{Conference Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
-\years{2018b}\textsc{Conference Programme Committee Member}. \emph{Web Audio Conference 2018}. Berlin, Germany.\\ 
-\years{2018a}\textsc{Conference Programme Committee Member}. \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
+\years{2019b}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{ACM Tangible, Embedded and Embodied Interaction 2020}. Sydney, Australia.\\ 
+\years{2019a}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
+%\years{2018b}\textsc{Conference Programme Committee Member}. \emph{Web Audio Conference 2018}. Berlin, Germany.\\ 
+\years{2018a}\textsc{Conference Programme Committee Member} (Meta-reviewer). \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
 \years{2017d}\textsc{Conference Session Chair}. \emph{Web Audio Conference 2017}. London.\\
-\years{2017c}\textsc{Conference Programme Committee Member}. \emph{Web Audio Conference 2017}. London.\\ 
-\years{2017b}\textsc{Conference Programme Committee Member}. \emph{Second Conference on Computer Simulation of Musical Creativity}, Open University. Milton Keynes, UK.\\ 
+%\years{2017c}\textsc{Conference Programme Committee Member}. \emph{Web Audio Conference 2017}. London.\\ 
+%\years{2017b}\textsc{Conference Programme Committee Member}. \emph{Second Conference on Computer Simulation of Musical Creativity}, Open University. Milton Keynes, UK.\\ 
 \years{2017a}\textsc{Conference Local Committee Member}. \emph{International Conference on Computational Creativity 2017}, Georgia Tech. Atlanta, GA, USA.\\
-\years{2016b}\textsc{Co-Founder \& Co-Chair}. \emph{Women in Music Tech Committee}, GTCMT, Georgia Tech. Atlanta, GA, USA.\\
-\years{2016b}\textsc{Conference Programme Committee Member}. \emph{International Conference on Live Interfaces 2016}, Brighton, UK.\\
-\years{2016a}\textsc{Conference Music/Artworks Co-Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
+%\years{2016b}\textsc{Conference Programme Committee Member}. \emph{International Conference on Live Interfaces 2016}, Brighton, UK.\\
+\years{2016}\textsc{Conference Music/Artworks Co-Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2011b}\textsc{Conference Session Chair} (``Laptop/Coding/NI''). \emph{International Computer Music Conference}. Huddersfield, UK.\\
 \years{2011a}\textsc{Conference Committee Member}. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.
 
-\subsection*{Conference Reviewer}
+\subsection*{Conference Programme Committee Member (Reviewer)}
 \noindent
 
 \years{2020b}\emph{Workshop on the Internet of Sounds} (2020).\\ 
