--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -212,12 +212,12 @@ Role: Creator \& Director.
 \subsection*{Principal Investigator}
 
 {
-\years{04/2020-01/2021}\textsc{Human Data Interaction / EPSRC grant} \\
+\years{04/2020-06/2021}\textsc{Human Data Interaction Network Plus Grant/EPSRC grant} \\
 Funding body: EPSRC. \\
 Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding''.\\
 Role: PI. \\
-Partners: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; IKLECTIK; Phonos; L’Ull Cec. \\
-Collaborators: Toplap Barcelona, Flucoma, Freesound.\\
+Partners: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; IKLECTIK; Phonos; l’ull cec. \\
+Collaborators: TOPLAP Barcelona, FluCoMa, Freesound.\\
 Total Pound Amount: 10,000 \pounds
 %Candidate’s Share: 
 
@@ -708,12 +708,18 @@ Master of Music, Communication and Technology (MCT), Norwegian University of Sci
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{10/2018}Course: \emph{MCT4000 Physical Computing Workshop} (28 h). \# Students: $\sim$15. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
-Role: Creation of syllabus, creation of content, instruction and assessment.
+Role: Creation of syllabus, creation of content, instruction and assessment.\\
 
 
 \subsection*{Undergraduate Courses}
 \noindent
 
+\years{01/2020--04/2021}Course: \emph{MATD1019 Audio Electronics Fundamentals} (12 h). \# Students: $\sim$10. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Course leader, creation of content for lectures, instruction and assessment.\\
+\years{01/2021--04/2021}Course: \emph{TECH3011 Studio Technology: Audio Electronics} (12 h). \# Students: $\sim$16. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Creation of content for lectures and labs, instruction and assessment.\\
 \years{10/2020--12/2020}Course: \emph{MATD2004 Further Digital Signal Processing} (10 h). \# Students: $\sim$14. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Course leader, creation of content for lectures, seminars and labs (blended teaching), instruction and assessment.\\
@@ -851,7 +857,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \noindent
 
 \years{2002}Co-Founder and Member of b4ng, a multidisciplinary collective in search of new forms of audiovisual communication. Barcelona.\\
-\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona. \\ [1.3cm]%hack
+\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona. %\\ %[1.3cm]%hack
 
 %\hrule
 \section*{Professional Activities}
