--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -191,9 +191,10 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\noindent
 
 \subsection*{Academic Grants, Honors \& Awards}
-\years{2019b} \textsc{Web Audio Conference 2019 Best Paper Award}. NTNU, Trondheim, Norway.\\
+\years{2019c} \textsc{Web Audio Conference 2019 Best Paper Award} to Anna Xambó, Robin Støckert, Alexander Refsum Jensenius and Sigurd Saue. NTNU, Trondheim, Norway.\\
+\years{2019b} \textsc{The EUNIS DØRUP E-Learning Award} to Robin Støckert, Alexander Refsum Jensenius, Anna Xambó and Øyvind Brandtsegg. NTNU, Trondheim, Norway.\\
 %\years{2019a} \textsc{Travel grant for European research and promotion} (30,000 NOK, approx. 3,000 \euro). NTNU, Trondheim, Norway.\\
-\years{2018--2019} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK, approx. 25,000 \euro), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
+%\years{2018--2019} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK, approx. 25,000 \euro), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
 \years{2017} NCWIT Engagement Excellence Award (5,000 \$ cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
 \years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
 \years{10/2010--07/2013}\textsc{3-year Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
@@ -218,8 +219,13 @@ Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Co
 Role: PI. \\
 Partners: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; IKLECTIK; Phonos; l’ull cec. \\
 Collaborators: TOPLAP Barcelona, FluCoMa, Freesound.\\
-Total Pound Amount: 10,000 \pounds
-%Candidate’s Share: 
+Total Pound Amount: 10,000 \pounds \\
+
+\years{08/2018-12/2019}\textsc{Start-up Package (Startpakke)} \\
+Funding body: NTNU. \\
+The start-up package is awarded to women in permanent academic positions in a scientific field with underrepresentation of women to start their academic careers. With part of this funding I co-founded and was chair of the organisation Women Nordic in Music Technology (\emph{WoNoMute}) (see Enterpreneurship). \\
+Role: PI. \\
+Total Euro Amount: 250,000 NOK, approx. 25,000 \euro \\
 
 \years{11/2003-10/2004}\textsc{Teaching innovation project grant} \\
 Funding body: Fundació Caixa de Sabadell. \\
@@ -246,6 +252,7 @@ Role: Conference chair. \\
 Total Fundraised Norwegian Krone Amount: 120,000 NOK (approx. 12,000 \euro)\\[.1cm]
 \years{2019a}\textsc{Internal funding for a COST application} \\
 Role: Project leader. \\
+Travel grant for European research and promotion.\\
 Total Fundraised Norwegian Krone Amount: 30,000 NOK (approx. 3,000 \euro)\\[.1cm]
 \years{2017--2018}\textsc{Female Laptop Orchestra + WoNoMute +YSWN + Sonora: seminar and concert at SARC} \\
 Role: Co-organizer and participant of the event. \\
@@ -283,7 +290,7 @@ Project: ``Transdata Pr.''.  \\
 Role: Creator, Director \& Video Editor.\\
 Collaborators: Gerard Roma (music), Oscar Abril Ascaso (essay). \\
 Total Euro Amount: 3,000 \euro\\ 
-Candidate’s Share: 50\% (1,500 \euro)\\
+Candidate’s Share: 50\% (1,500 \euro)\\[0.5cm]%hack
 
 \years{09/1998--08/1999}\textsc{Audiovisual production grant} \\
 Funding body: Departament de Cultura de la Generalitat de Catalunya (Department of Culture of Catalan Government).\\
@@ -407,6 +414,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
+\years{2021} \textsc{Oral Presenter (online)} (February 23, 2021). “Live Coding Using Crowdsourced Sounds and a Virtual Agent". \emph{ATLAS Seminar / Colloquium}. University of Colorado Boulder, Boulder, CO, USA.\\ 
 \years{2020c} \textsc{Oral Presenter (online)} (October 6, 2020). “From Tabletop Tangible Interfaces to Virtual Agents in Live Coding: Five Years of Research in Progress". \emph{IUPUI MAT PhD seminar}. Department of Music and Arts Technology, Purdue School of Engineering and Technology, Indiana University--Purdue University Indianapolis, Indianapolis, IN, USA.\\ 
 \years{2020b} \textsc{Oral Presenter (online)} (September 21, 2020). “Virtual Agents in Live Coding: Preliminary Investigations". \emph{Meetup for Women in Arts and Technology}. NOTAM, Oslo, Norway.\\ 
 \years{2020a} \textsc{Keynote Speaker (online)} (June 24, 2020). “Collaborative/Participatory Music Experiences: A Dialogue Between SMC and HCI". \emph{Sound and Music Computing Conference 2020 (SMC 2020)}. Torino, Italy. \href{https://youtu.be/fWqhhdkVO6o}{[video]}\\ 
@@ -566,6 +574,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Performances}
 \noindent
 
+\years{2021}\textbf{Xambó, A.} (February 21, 2021). ``They Are the Robots: a live coding session''. \emph{Transnodal TOPLAP}. Online event. Streaming from Sheffield, UK.\\
 \years{2020e}\textbf{Xambó, A.} (December 12, 2020). ``A live coding session''. \emph{Similar Sounds: A Virtual Agent in Live Coding}. IKLECTIK, London. Online event. Streaming from Sheffield, UK.\\
 \years{2020d}\textbf{Xambó, A.} (November 14, 2020). ``A live coding session in binaural audio''. \emph{Sound Junction Satellites: Live Coding \& 3-D Sound -- Online Live Stream}. University of Sheffield Concerts/Algomech, Sheffield, UK. Online event. Streaming from Sheffield, UK.\\
 \years{2020c}\textbf{Xambó, A.} (July 17, 2020). ``A Live Coding Exploration of How the Network Sounds''. \emph{Network Music Festival 2020}. Streaming from Sheffield, UK.\\
@@ -819,9 +828,10 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \years{08/2018--12/2019}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistants Mari Lesteberg and Ane Bjerkan.\\
 \years{05/2016--12/2017}Mentor and advisor of the members of the student-led organization \emph{Women in Music Tech}, including the chair of the organization, Léa Ikkache, the editor-in-chief of the newsletter Amruta Vidwans, and other organization members, such as Jyoti Narang.
  
-\section*{External Examining}
+\section*{Assessment}
 \noindent
 
+\years{02/2021}PhD review (midway assessment) for Sam Topley, PhD programme: DMU/Midlands4Cities. Leicester, UK.\\
 \years{05/2020}External assessor, IMV PhD Midway Assessment for Qichao Lan, Department of Musicology, Faculty of Humanities, University of Oslo, Norway.\\
 \years{08/2019}External MSc examiner, Torgrim Rudland Næss, Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo, Norway.\\
 \years{11/2018--06/2019}Appraisal Committee Chair for Hilmar Thordarson, Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway.
